[gd_scene load_steps=19 format=3 uid="uid://bf103oyyesidr"]

[ext_resource type="Script" path="res://scripts/bubble_speech.gd" id="1_0fl4e"]
[ext_resource type="Texture2D" uid="uid://yp3cd6mb0p5o" path="res://textures/GUI.png" id="1_j6r5c"]
[ext_resource type="FontFile" uid="uid://ik4ryrm7u6i3" path="res://fonts/Pixel.ttf" id="2_6drj4"]
[ext_resource type="FontFile" uid="uid://c8mk7icos60y2" path="res://fonts/pixel.regular.ttf" id="3_wioui"]
[ext_resource type="Texture2D" uid="uid://cyjmwuwtf6qlw" path="res://textures/emotes/pipo-popupemotes120.png" id="4_7ldli"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_n1oxi"]
texture = ExtResource("1_j6r5c")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0
0:16/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
6:16/0 = 0
7:16/0 = 0
8:16/0 = 0
9:16/0 = 0
10:16/0 = 0
11:16/0 = 0
0:17/0 = 0
1:17/0 = 0
2:17/0 = 0
3:17/0 = 0
4:17/0 = 0
5:17/0 = 0
6:17/0 = 0
7:17/0 = 0
8:17/0 = 0
9:17/0 = 0
10:17/0 = 0
11:17/0 = 0
0:18/0 = 0
1:18/0 = 0
2:18/0 = 0
3:18/0 = 0
4:18/0 = 0
5:18/0 = 0
6:18/0 = 0
7:18/0 = 0
8:18/0 = 0
9:18/0 = 0
10:18/0 = 0
11:18/0 = 0

[sub_resource type="TileSet" id="TileSet_gs3m7"]
sources/0 = SubResource("TileSetAtlasSource_n1oxi")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_57xuo"]
texture = ExtResource("1_j6r5c")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0
0:16/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
6:16/0 = 0
7:16/0 = 0
8:16/0 = 0
9:16/0 = 0
10:16/0 = 0
11:16/0 = 0
0:17/0 = 0
1:17/0 = 0
2:17/0 = 0
3:17/0 = 0
4:17/0 = 0
5:17/0 = 0
6:17/0 = 0
7:17/0 = 0
8:17/0 = 0
9:17/0 = 0
10:17/0 = 0
11:17/0 = 0
0:18/0 = 0
1:18/0 = 0
2:18/0 = 0
3:18/0 = 0
4:18/0 = 0
5:18/0 = 0
6:18/0 = 0
7:18/0 = 0
8:18/0 = 0
9:18/0 = 0
10:18/0 = 0
11:18/0 = 0

[sub_resource type="TileSet" id="TileSet_x7mnv"]
sources/0 = SubResource("TileSetAtlasSource_57xuo")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h1s8p"]
bg_color = Color(0.6, 0.6, 0.6, 0)
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bmtxu"]
bg_color = Color(0.6, 0.6, 0.6, 0)
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l3bch"]
bg_color = Color(0.6, 0.6, 0.6, 0)
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cqxu8"]
bg_color = Color(0.6, 0.6, 0.6, 0)
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rq62g"]
bg_color = Color(0.6, 0.6, 0.6, 0)
corner_detail = 1

[sub_resource type="AtlasTexture" id="AtlasTexture_vvrqe"]
atlas = ExtResource("4_7ldli")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p6l8y"]
atlas = ExtResource("4_7ldli")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qdkw6"]
atlas = ExtResource("4_7ldli")
region = Rect2(64, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_df5jn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vvrqe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p6l8y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qdkw6")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="BubbleSpeech" type="Node2D" groups=["bubble_speech"]]
script = ExtResource("1_0fl4e")

[node name="Canvas" type="CanvasLayer" parent="."]
visible = false

[node name="ScreenCotainer" type="Control" parent="Canvas"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BG" type="ColorRect" parent="Canvas/ScreenCotainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.156863, 0.156863, 0.156863, 0.815686)

[node name="Container" type="Control" parent="Canvas/ScreenCotainer"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -297.0
offset_top = -135.0
offset_right = 298.0
grow_horizontal = 2
grow_vertical = 0

[node name="AvatarBG" type="TileMap" parent="Canvas/ScreenCotainer/Container"]
tile_set = SubResource("TileSet_gs3m7")
format = 2
layer_0/tile_data = PackedInt32Array(-327680, 0, 2, -65536, 0, 3, -262144, 0, 3, -131072, 0, 3, -196608, 0, 3, -327679, 65536, 2, -327678, 65536, 2, -327677, 65536, 2, -327676, 65536, 2, -327675, 131072, 2, -262139, 131072, 3, -196603, 131072, 3, -131067, 131072, 3, -65531, 131072, 3, -65532, 65536, 3, -65533, 65536, 3, -65534, 65536, 3, -65535, 65536, 3, -262143, 65536, 3, -262142, 65536, 3, -262141, 65536, 3, -262140, 65536, 3, -131068, 65536, 3, -196604, 65536, 3, -196605, 65536, 3, -131069, 65536, 3, -131070, 65536, 3, -196606, 65536, 3, -196607, 65536, 3, -131071, 65536, 3, 5, 131072, 4, 4, 65536, 4, 3, 65536, 4, 2, 65536, 4, 1, 65536, 4, 0, 0, 4)

[node name="AvatarContainer" type="TextureRect" parent="Canvas/ScreenCotainer/Container/AvatarBG"]
offset_left = 8.0
offset_top = -70.0
offset_right = 87.0
offset_bottom = 6.0
expand_mode = 1

[node name="SpeechBG" type="TileMap" parent="Canvas/ScreenCotainer/Container"]
position = Vector2(-145.5, -513)
tile_set = SubResource("TileSet_x7mnv")
format = 2
layer_0/tile_data = PackedInt32Array(2162697, 0, 2, 2555913, 0, 4, 2490377, 0, 3, 2359305, 0, 3, 2228233, 0, 3, 2293769, 0, 3, 2424841, 0, 3, 2162698, 65536, 2, 2162733, 131072, 2, 2228269, 131072, 3, 2293805, 131072, 3, 2359341, 131072, 3, 2424877, 131072, 3, 2424876, 65536, 3, 2490413, 131072, 3, 2490412, 65536, 3, 2555949, 131072, 4, 2555948, 65536, 4, 2555947, 65536, 4, 2555946, 65536, 4, 2555945, 65536, 4, 2555944, 65536, 4, 2555943, 65536, 4, 2555942, 65536, 4, 2555941, 65536, 4, 2555940, 65536, 4, 2555939, 65536, 4, 2555938, 65536, 4, 2555937, 65536, 4, 2555936, 65536, 4, 2490399, 65536, 3, 2490398, 65536, 3, 2490397, 65536, 3, 2490396, 65536, 3, 2490395, 65536, 3, 2555935, 65536, 4, 2555934, 65536, 4, 2555933, 65536, 4, 2555932, 65536, 4, 2555931, 65536, 4, 2555930, 65536, 4, 2555929, 65536, 4, 2555928, 65536, 4, 2555927, 65536, 4, 2555926, 65536, 4, 2555925, 65536, 4, 2555924, 65536, 4, 2555918, 65536, 4, 2555917, 65536, 4, 2555916, 65536, 4, 2555914, 65536, 4, 2555915, 65536, 4, 2555919, 65536, 4, 2555920, 65536, 4, 2555921, 65536, 4, 2555922, 65536, 4, 2555923, 65536, 4, 2162699, 65536, 2, 2162700, 65536, 2, 2162701, 65536, 2, 2162702, 65536, 2, 2162703, 65536, 2, 2162704, 65536, 2, 2162705, 65536, 2, 2162706, 65536, 2, 2162707, 65536, 2, 2228244, 65536, 3, 2228245, 65536, 3, 2228246, 65536, 3, 2228247, 65536, 3, 2162708, 65536, 2, 2162709, 65536, 2, 2162710, 65536, 2, 2162711, 65536, 2, 2162712, 65536, 2, 2162713, 65536, 2, 2162714, 65536, 2, 2162715, 65536, 2, 2162716, 65536, 2, 2162717, 65536, 2, 2162718, 65536, 2, 2162719, 65536, 2, 2162720, 65536, 2, 2162721, 65536, 2, 2162722, 65536, 2, 2162723, 65536, 2, 2162724, 65536, 2, 2162725, 65536, 2, 2162726, 65536, 2, 2162727, 65536, 2, 2162728, 65536, 2, 2162729, 65536, 2, 2162730, 65536, 2, 2162731, 65536, 2, 2162732, 65536, 2, 2424856, 65536, 3, 2359320, 65536, 3, 2293784, 65536, 3, 2228248, 65536, 3, 2228249, 65536, 3, 2293785, 65536, 3, 2359321, 65536, 3, 2424857, 65536, 3, 2490393, 65536, 3, 2490392, 65536, 3, 2490391, 65536, 3, 2424855, 65536, 3, 2359319, 65536, 3, 2293783, 65536, 3, 2293782, 65536, 3, 2293781, 65536, 3, 2293780, 65536, 3, 2293779, 65536, 3, 2228243, 65536, 3, 2228242, 65536, 3, 2228241, 65536, 3, 2228240, 65536, 3, 2228239, 65536, 3, 2228238, 65536, 3, 2228237, 65536, 3, 2228236, 65536, 3, 2228235, 65536, 3, 2228234, 65536, 3, 2293770, 65536, 3, 2359306, 65536, 3, 2424842, 65536, 3, 2490378, 65536, 3, 2490379, 65536, 3, 2424843, 65536, 3, 2359307, 65536, 3, 2293771, 65536, 3, 2293772, 65536, 3, 2359308, 65536, 3, 2424844, 65536, 3, 2490380, 65536, 3, 2490381, 65536, 3, 2424845, 65536, 3, 2359309, 65536, 3, 2293773, 65536, 3, 2293774, 65536, 3, 2359310, 65536, 3, 2424846, 65536, 3, 2490382, 65536, 3, 2490383, 65536, 3, 2424847, 65536, 3, 2359311, 65536, 3, 2293775, 65536, 3, 2293776, 65536, 3, 2359312, 65536, 3, 2424848, 65536, 3, 2490384, 65536, 3, 2490385, 65536, 3, 2424849, 65536, 3, 2359313, 65536, 3, 2293777, 65536, 3, 2293778, 65536, 3, 2359314, 65536, 3, 2424850, 65536, 3, 2490386, 65536, 3, 2490387, 65536, 3, 2424851, 65536, 3, 2359315, 65536, 3, 2359316, 65536, 3, 2424852, 65536, 3, 2490388, 65536, 3, 2490389, 65536, 3, 2424853, 65536, 3, 2359317, 65536, 3, 2359318, 65536, 3, 2424854, 65536, 3, 2490390, 65536, 3, 2490394, 65536, 3, 2424858, 65536, 3, 2359322, 65536, 3, 2293786, 65536, 3, 2228250, 65536, 3, 2228251, 65536, 3, 2293787, 65536, 3, 2359323, 65536, 3, 2424859, 65536, 3, 2424860, 65536, 3, 2359324, 65536, 3, 2293788, 65536, 3, 2228252, 65536, 3, 2228253, 65536, 3, 2293789, 65536, 3, 2359325, 65536, 3, 2424861, 65536, 3, 2424862, 65536, 3, 2359326, 65536, 3, 2293790, 65536, 3, 2228254, 65536, 3, 2228255, 65536, 3, 2293791, 65536, 3, 2359327, 65536, 3, 2424863, 65536, 3, 2424864, 65536, 3, 2359328, 65536, 3, 2293792, 65536, 3, 2228256, 65536, 3, 2228257, 65536, 3, 2293793, 65536, 3, 2359329, 65536, 3, 2424865, 65536, 3, 2490401, 65536, 3, 2490400, 65536, 3, 2490402, 65536, 3, 2424866, 65536, 3, 2359330, 65536, 3, 2293794, 65536, 3, 2228258, 65536, 3, 2228259, 65536, 3, 2293795, 65536, 3, 2359331, 65536, 3, 2424867, 65536, 3, 2490403, 65536, 3, 2490404, 65536, 3, 2424868, 65536, 3, 2359332, 65536, 3, 2293796, 65536, 3, 2228260, 65536, 3, 2228261, 65536, 3, 2293797, 65536, 3, 2359333, 65536, 3, 2424869, 65536, 3, 2490405, 65536, 3, 2490406, 65536, 3, 2424870, 65536, 3, 2359334, 65536, 3, 2293798, 65536, 3, 2228262, 65536, 3, 2228263, 65536, 3, 2293799, 65536, 3, 2359335, 65536, 3, 2424871, 65536, 3, 2490407, 65536, 3, 2490408, 65536, 3, 2424872, 65536, 3, 2359336, 65536, 3, 2293800, 65536, 3, 2228264, 65536, 3, 2228265, 65536, 3, 2293801, 65536, 3, 2359337, 65536, 3, 2424873, 65536, 3, 2490409, 65536, 3, 2490410, 65536, 3, 2424874, 65536, 3, 2359338, 65536, 3, 2293802, 65536, 3, 2228266, 65536, 3, 2228267, 65536, 3, 2293803, 65536, 3, 2359339, 65536, 3, 2424875, 65536, 3, 2490411, 65536, 3, 2359340, 65536, 3, 2293804, 65536, 3, 2228268, 65536, 3)

[node name="Text" type="Control" parent="Canvas/ScreenCotainer/Container"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 11.0
offset_top = 30.0
offset_right = -19.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="SpeechBox" type="RichTextLabel" parent="Canvas/ScreenCotainer/Container/Text"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -7.0
offset_right = -30.0
offset_bottom = 7.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("2_6drj4")
theme_override_fonts/bold_font = ExtResource("3_wioui")
theme_override_fonts/italics_font = ExtResource("3_wioui")
theme_override_fonts/bold_italics_font = ExtResource("3_wioui")
theme_override_fonts/mono_font = ExtResource("3_wioui")
theme_override_font_sizes/normal_font_size = 14
theme_override_font_sizes/bold_font_size = 16
bbcode_enabled = true
text = "[b]Google[/b] Docs vous permet de collaborer dans des documents que vous créez en ligne. Modifiez ces documents en mode collaboratif grâce au partage des données ..."
fit_content = true
scroll_active = false

[node name="ArrowNext" type="Button" parent="Canvas/ScreenCotainer/Container/Text"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -28.0
offset_top = -27.0
offset_right = 4.0
offset_bottom = 3.0
grow_horizontal = 0
grow_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_h1s8p")
theme_override_styles/hover = SubResource("StyleBoxFlat_bmtxu")
theme_override_styles/pressed = SubResource("StyleBoxFlat_l3bch")
theme_override_styles/disabled = SubResource("StyleBoxFlat_cqxu8")
theme_override_styles/focus = SubResource("StyleBoxFlat_rq62g")
flat = true

[node name="Sprite" type="AnimatedSprite2D" parent="Canvas/ScreenCotainer/Container/Text/ArrowNext"]
position = Vector2(16, 16)
sprite_frames = SubResource("SpriteFrames_df5jn")
autoplay = "default"
frame_progress = 0.504548

[connection signal="pressed" from="Canvas/ScreenCotainer/Container/Text/ArrowNext" to="." method="_on_arrow_next_pressed"]
